Add support for setting CPU affinity
